--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@
 
   --shape-square: #ff2056;
   --shape-circle: #2b7fff;
-  --shape-triangle: #00a63e;
+  --shape-rectangle: #008236;
 }
 
 body {
@@ -27,6 +27,7 @@ body {
   line-height: 1.5;
 }
 
+/* Header */
 .header {
   display: flex;
   align-items: center;
@@ -45,6 +46,7 @@ body {
   color: var(--zinc-900);
 }
 
+/* Grid */
 .container {
   max-width: 600px;
   margin: 0 auto;
@@ -60,6 +62,12 @@ body {
   align-items: center;
   justify-content: center;
   gap: 1.5rem;
+}
+
+/* Score */
+.score-text {
+  font-size: 1.25rem;
+  text-align: center;
 }
 
 /* Shapes */
@@ -82,6 +90,11 @@ body {
   border-radius: 50%;
 }
 
+#rectangle {
+  background: var(--shape-rectangle);
+  width: 10rem;
+}
+
 /* Dropzone */
 .dropzone {
   height: 5rem;
@@ -92,6 +105,10 @@ body {
 
 .dropzone[data-shape="circle"] {
   border-radius: 50%;
+}
+
+.dropzone[data-shape="rectangle"] {
+  width: 10rem;
 }
 
 .dropzone.dropped {
